@@ -230,6 +230,7 @@ gmime-2.6
 gio-2.0
 gthread-2.0
 gnutls
+fribidi
 ])
 
 PKG_CHECK_MODULES(BALSA_AB, [
